# obstacle_detection

./: CMakeLists.txt  package.xml
examples/: Rt_calib.cpp  object_detection.cpp  object_detection_with_sparity.cpp  object_detection_with_sparity_v2.cpp  object_detection_with_sparity_v2_node.cpp
include/: bbox.h  bbox2box3d.h  box3d.h  sparity_2d_detection.h  stereo_match.h  yolo_opencv.h
scripts/data_augmentation/: augmentation.py  augmentation_c5.py  augmentationv2.py  crop_object_img.py  rename.py  rename_obj_img.py
scripts/eval/: eval.py
scripts/gen_file_list/: gen_file_list.py
scripts/v_sparity/: v_sparity.m
src/: bbox2box3d.cpp  sparity_2d_detection.cpp  stereo_match.cpp  yolo_opencv.cpp
